--- a/public/screen.css
+++ b/public/screen.css
@@ -12,57 +12,13 @@ h1, h2, h3, h4 {
   font-family: 'Quicksand', sans-serif;
 }
 
-.imgContainer {
+/*.imgContainer {
   display: grid;
   width: 1000px;
+  justify-content: center;
   grid-template-columns: 200px 200px 200px;
   grid-gap: 5px;
-}
-
-.testContainer {
-  width: 1000px;
-  margin: 100px;
-  display: grid;
-  grid-template-columns: 200px 200px 200px;
-  grid-template-rows: auto auto;
-  grid-gap: 5px;
-}
-
-.gridItemA {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 3;
-  grid-row-end: 3;
-  z-index: 1;
-}
-
-.gridItemB {
-  grid-column: 3 / 4;
-  grid-row: 6 / 7;
-}
-
-.ex1 {
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-start: 2;
-  grid-row-end: 3;
-  font-size: 1.5em;
-}
-
-.ex2 {
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-start: 4;
-  grid-row-end: 4;
-  font-size: 1.5em;
-}
-
-.colorBlock {
-  grid-column: 1 / 2;
-  width: 300px;
-  height: 200px;
-  background-color: rgb(199, 0, 4);
-}
+}*/
 
 img {
   max-height: 200px;
